fixed overflow in wizard

--- a/compare-frontend/src/app/modules/wizard/wizard/wizard.component.css
+++ b/compare-frontend/src/app/modules/wizard/wizard/wizard.component.css
@@ -20,6 +20,11 @@
 
 }
 
+.wizard-content {
+    overflow: scroll;
+    max-height: 80vh;
+}
+
 .wizard.collapsed {
     width: 2.3rem;
     overflow: hidden;
